feat: add demo portal and selector sensing cache